--- a/.github/workflows/validate-tools.yml
+++ b/.github/workflows/validate-tools.yml
@@ -125,7 +125,7 @@ jobs:
     name: Generate API Catalog
     runs-on: ubuntu-latest
     needs: [validate, verify-tools]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     
     steps:
     - name: 📥 Checkout repository
